cargo-test-debug.log
    Updating crates.io index
 Downloading crates ...
  Downloaded equivalent v1.0.2
  Downloaded fixedbitset v0.4.2
  Downloaded tempfile v3.27.0
  Downloaded clap_derive v4.6.1
  Downloaded bitflags v2.13.0
  Downloaded anstyle-parse v1.0.0
  Downloaded heck v0.5.0
  Downloaded hashbrown v0.17.1
  Downloaded utf8parse v0.2.2
  Downloaded clap_builder v4.6.0
  Downloaded num-traits v0.2.19
  Downloaded serde_derive v1.0.228
  Downloaded linux-raw-sys v0.12.1
  Downloaded syn v2.0.118
  Downloaded serde_core v1.0.228
  Downloaded zmij v1.0.23
  Downloaded once_cell v1.21.4
  Downloaded getrandom v0.4.3
  Downloaded strsim v0.11.1
  Downloaded unicode-ident v1.0.24
  Downloaded quote v1.0.46
  Downloaded memchr v2.8.3
  Downloaded rustix v1.1.4
  Downloaded proc-macro2 v1.0.106
  Downloaded fastrand v2.4.1
  Downloaded petgraph v0.6.5
  Downloaded cfg-if v1.0.4
  Downloaded serde_json v1.0.150
  Downloaded colorchoice v1.0.5
  Downloaded itoa v1.0.18
  Downloaded clap_lex v1.1.0
  Downloaded clap v4.6.1
  Downloaded anstyle-query v1.1.5
  Downloaded anstyle v1.0.14
  Downloaded anstream v1.0.0
  Downloaded libc v0.2.186
  Downloaded indexmap v2.14.0
  Downloaded iana-time-zone v0.1.65
  Downloaded serde v1.0.228
  Downloaded autocfg v1.5.1
  Downloaded errno v0.3.14
  Downloaded chrono v0.4.45
  Downloaded is_terminal_polyfill v1.70.2
  Downloaded uuid v1.23.5
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.46
   Compiling unicode-ident v1.0.24
   Compiling autocfg v1.5.1
   Compiling serde_core v1.0.228
   Compiling num-traits v0.2.19
   Compiling zmij v1.0.23
   Compiling libc v0.2.186
   Compiling getrandom v0.4.3
   Compiling serde_json v1.0.150
   Compiling serde v1.0.228
   Compiling syn v2.0.118
   Compiling itoa v1.0.18
   Compiling iana-time-zone v0.1.65
   Compiling memchr v2.8.3
   Compiling cfg-if v1.0.4
   Compiling chrono v0.4.45
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.17.1
   Compiling indexmap v2.14.0
   Compiling fixedbitset v0.4.2
   Compiling rustix v1.1.4
   Compiling petgraph v0.6.5
   Compiling utf8parse v0.2.2
   Compiling anstyle-parse v1.0.0
   Compiling uuid v1.23.5
   Compiling colorchoice v1.0.5
   Compiling linux-raw-sys v0.12.1
   Compiling serde_derive v1.0.228
   Compiling anstyle v1.0.14
   Compiling bitflags v2.13.0
   Compiling anstyle-query v1.1.5
   Compiling is_terminal_polyfill v1.70.2
   Compiling anstream v1.0.0
   Compiling once_cell v1.21.4
   Compiling heck v0.5.0
   Compiling strsim v0.11.1
   Compiling clap_lex v1.1.0
   Compiling fastrand v2.4.1
   Compiling clap_builder v4.6.0
   Compiling clap_derive v4.6.1
   Compiling tempfile v3.27.0
   Compiling clap v4.6.1
   Compiling stitch v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/stitch)
   Compiling phenix-mcp-core v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/phenix-mcp-core)
warning: unreachable pattern
   --> crates/stitch/src/workloop.rs:377:13
    |
373 |         (LoopState::Open, LoopState::InSyncDev, _) => Ok(()),
    |          --------------- matches all the relevant values
...
377 |             LoopState::Open
    |             ^^^^^^^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: `stitch` (lib) generated 1 warning
   Compiling stitch-cli v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/stitch-cli)
   Compiling stitch-mcp v0.1.0 (/home/runner/work/phenix-stitch/phenix-stitch/crates/stitch-mcp)
error[E0063]: missing fields `verified_change_id` and `verified_commit_id` in initializer of `VerificationPointer`
    --> crates/stitch-mcp/src/tools.rs:1520:31
     |
1520 |                 verification: workloop::VerificationPointer {
     |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `verified_change_id` and `verified_commit_id`

error[E0063]: missing field `candidate` in initializer of `LoopWallet`
    --> crates/stitch-mcp/src/tools.rs:1513:23
     |
1513 |             Err(_) => workloop::LoopWallet {
     |                       ^^^^^^^^^^^^^^^^^^^^ missing `candidate`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `stitch-mcp` (bin "stitch-mcp" test) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
warning: `stitch` (lib test) generated 1 warning (1 duplicate)
